# VMML

./: .gitignore  README.md
im_enhance/: CMakeLists.txt  main.cpp
im_enhance/include/: im_enhance.h  npy.hpp
im_enhance/python/: mod.cpp  setup.py
im_enhance/src/: bag2video.py  bagprocess.py  dhe.cpp  expfusion.cpp  im_enhance.cpp  matutils.h  retinex.cpp  ying.py
libopenvslam/: CMakeLists.txt  package.xml
libopenvslam/DBoW2/: TemplatedVocabulary.h
libopenvslam/openvslam/: CMakeLists.txt  system.h  tracking_module.cc  tracking_module.h
libopenvslam/openvslam/camera/: CMakeLists.txt  perspective.cc  perspective.h
libopenvslam/openvslam/data/: CMakeLists.txt  frame.cc  frame.h  keyframe.cc  keyframe.h
libopenvslam/openvslam/feature/: CMakeLists.txt  orb_extractor_node.h
libopenvslam/openvslam/initialize/: CMakeLists.txt
libopenvslam/openvslam/io/: CMakeLists.txt
libopenvslam/openvslam/match/: CMakeLists.txt
libopenvslam/openvslam/module/: CMakeLists.txt  frame_tracker.cc  frame_tracker.h
libopenvslam/openvslam/optimize/: CMakeLists.txt
libopenvslam/openvslam/optimize/g2o/: CMakeLists.txt
libopenvslam/openvslam/optimize/g2o/se3/: CMakeLists.txt
libopenvslam/openvslam/publish/: CMakeLists.txt
libopenvslam/openvslam/solve/: CMakeLists.txt
libopenvslam/openvslam/util/: CMakeLists.txt
oxford_test/: CMakeLists.txt  OxfordDataset.cpp  OxfordDataset.h  csv.h  index_mapper.cpp  oxford_open.cpp  package.xml  test_filter.cpp  tobag.cpp  viewer.cpp
oxford_test/python/: oxford.py  samples.py  viewer.py
place_recognizer/: CMakeLists.txt  package.xml
place_recognizer/include/: ImageBag.h  IncrementalBoW.h  IncrementalBoW_serialization.h  ProgramOptionParser.h
place_recognizer/lib/: ImageBag.cpp  IncrementalBoW.cpp
place_recognizer/nodes/: ibow_mapper.cpp  mapper.cpp  npy.hpp  recognizer_srv.cpp  test_recognizer_srv.py
rosbag_viewer/: CMakeLists.txt  package.xml
rosbag_viewer/bag_viewer/: BagViewer.cpp  BagViewer.h  BagViewer.ui  ClickableLabel.cpp  GenericDatasetViewer.cpp  GenericDatasetViewer.h  GenericDatasetViewer.ui  GenericImagesetViewer.cpp  GenericImagesetViewer.h  GenericImagesetViewer.ui  ImageRatioEqualViewer.cpp  ImageRatioEqualViewer.h  bagviewer2.cpp  ratio_layouted_frame.cpp
rosbag_viewer/include/: GenericImagesetViewer.h  RandomAccessBag.h
rosbag_viewer/python/: RandomAccessBag.py  pcbagviewer.py
rosbag_viewer/random_access_bag/: RandomAccessBag.cpp
rviz_offline_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
vmml/vision_core/: CMakeLists.txt  package.xml
vmml/vision_core/DBoW2/: CMakeLists.txt  CMakeLists.txt.bak
vmml/vision_core/cmake_modules/: FindG2O.cmake
vmml/vision_core/docs/: activity-diagram-mapping-monocular+lidar.dia  activity-diagram-mapping-monocular.dia  class_diagram.dia  class_diagram.dia.autosave
vmml/vision_core/include/: BaseFrame.h  CameraPinholeParams.h  ImageBag.h  ImageDatabase.h  ImageDatabaseBuilder.h  Initializer.h  KeyFrame.h  LidarScanBag.h  LocalLidarMapper.h  MapBuilder.h  MapBuilderLidar.h  MapObjectSerialization.h  MapPoint.h  Matcher.h  ORBVocabulary.h  Optimizer.h  Pose.h  Trajectory.h  TrajectoryGNSS.h  Triangulation.h  VisionMap.h  VisualOdometry.h  cvobj_serialization.h  utilities.h
vmml/vision_core/include/vmml/: BaseFrame.h  CameraPinholeParams.h  FFrame.h  FeatureTrack.h  FrameHandler.h  ImageBag.h  ImageDatabase.h  ImageDatabaseBuilder.h  ImageDatabase_serialization.h  ImagePreprocessor.h  Initializer.h  KeyFrame.h  LidarScanBag.h  LidarScanBagRaw.h  LoopClosure.h  MapBuilder.h  MapBuilderLidar.h  MapObjectSerialization.h  MapPoint.h  Matcher.h  Optimizer.h  Pose.h  Retinex.h  SimpleMapBuilder.h  Trajectory.h  TrajectoryGNSS.h  Triangulation.h  VisionMap.h  VisualOdometry.h  cvobj_serialization.h  utilities.h
vmml/vision_core/src/: BaseFrame.cpp  CameraPinholeParams.cpp  FFrame.cpp  FeatureTrack.cpp  ImageBag.cpp  ImageDatabase.cpp  ImageDatabaseBuilder.cpp  ImagePreprocessor.cpp  Initializer.cpp  KeyFrame.cpp  LidarScanBag.cpp  LidarScanBagRaw.cpp  LocalLidarMapper.cpp  LoopClosure.cpp  MapBuilder.cpp  MapBuilderLidar.cpp  MapPoint.cpp  Matcher.cpp  ORBVocabulary.cpp  Optimizer.cpp  Pose.cpp  Retinex.cpp  Retinex.h  SimpleMapBuilder.cpp  Trajectory.cpp  TrajectoryGNSS.cpp  Triangulation.cpp  VisionMap.cpp  VisualOdometry.cpp  kdtree.hpp  shadow_removal.py  utilities.cpp
vmml/vision_core/src/_retinexpy/: retinex.py  run.py
vmml/vision_core/test/: cv_optflow.cpp  grid.cpp  image.cpp  lk_track.py  mapload_test.cpp  ndt_odom.cpp  test_blob.cc  testbag.cpp
vmml/vision_localizer/: CMakeLists.txt  package.xml
vmml/vision_localizer/msg/: map.msg
vmml/vision_mapper/: CMakeLists.txt  README.txt  Readme-SegNet.txt  package.xml
vmml/vision_mapper/include/: ConfigReader.h  CustomFeatureDetectors.h  ImagePipeline.h  MapBuilderLidar.h  ProgramOptions.h  ROSConnector.h  RVizConnector.h  Segmentation.h
vmml/vision_mapper/nodes/: image_trajectory.cpp  imagedb_mapper.cpp  imagelidar_bag_mapper.cpp  imagelidar_projection.cpp  index_creator.cpp  place_recognizer_srv.cpp  simple_bag_mapper.cpp  simple_mapper.cpp  test_imagedb.cpp  test_program_options.cpp  test_rgb_filters.cpp  test_vo.cpp  testbag.cpp  vocabulary_creator.cpp
vmml/vision_mapper/params/: config.ini
vmml/vision_mapper/rviz/: mapper.rviz
vmml/vision_mapper/src/: ConfigReader.cpp  CustomFeatureDetectors.cpp  ImagePipeline.cpp  MapBuilderLidar.cpp  ProgramOptions.cpp  ROSConnector.cpp  RVizConnector.cpp  Segmentation.cpp
vmml/vision_mapper/srv/: place_recognizer.srv
vmml/vision_mapper/utils/: lidar_conversion.py  test_place_recognizer_srv.py  test_rgb_filter.py
vmml_visualization/: CMakeLists.txt  package.xml
vmml_visualization/launch/: vosl_demo.launch
vmml_visualization/nodes/: VideoImageBag.cpp  VideoImageBag.h  imagelidar_projection.cpp  openvideo.cpp  preprocess_image_bag.cpp  test_rgb_filters.cpp  testbag.cpp  viso_run.cpp  vosl_demo.cpp  vosl_demo.old.cpp  vosl_place_recognizer_srv.cpp
vmml_visualization/nodes/sift/: sift.cpp  sift.hpp
vmml_visualization/rviz/: vosl_demo.rviz
(+1 files in other folders)
