<?xml version="1.0"?>
<package format="2">
  <name>place_recognizer</name>
  <version>0.0.0</version>
  <description>Vision-Based Place Recognizer</description>
  <maintainer email="sujiwo@todo.todo">Adi Sujiwo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> message_generation </build_depend>
  <depend> std_msgs </depend>
  <depend> sensor_msgs </depend>
  <depend> cv_bridge </depend>
  <exec_depend> message_runtime </exec_depend>

</package>
