<?xml version="1.0"?>
<package format="2">
  <name>vision_localizer</name>
  <version>0.0.1</version>
  <description>Vision-based Localization Package</description>

  <maintainer email="sujiwo@gmail.com">Adi Sujiwo</maintainer>
  <license>MIT</license>

  <build_depend>mesage_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
